--- a/SASS/style.css
+++ b/SASS/style.css
@@ -558,18 +558,24 @@ footer .footer_container ul li a {
 .dish__card .dish__card__name {
   line-height: 0.7;
   padding: 0.5em 1em;
-  width: 300px;
 }
 
 @media screen and (min-width: 375px) and (max-width: 1024px) {
   .dish__card .dish__card__name {
-    width: 200px;
+    max-width: 240px;
+    min-width: 240px;
   }
 }
 
 @media screen and (max-width: 375px) {
   .dish__card .dish__card__name {
     width: 150px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .dish__card .dish__card__name {
+    width: 400px;
   }
 }
 
@@ -642,6 +648,11 @@ div.dish__card__name p {
 .dish__card:nth-child(4) {
   -webkit-animation: FadeIn 1s cubic-bezier(0.39, 0.575, 0.565, 1) 2s both;
           animation: FadeIn 1s cubic-bezier(0.39, 0.575, 0.565, 1) 2s both;
+}
+
+.dish__card:nth-child(5) {
+  -webkit-animation: FadeIn 1s cubic-bezier(0.39, 0.575, 0.565, 1) 2.5s both;
+          animation: FadeIn 1s cubic-bezier(0.39, 0.575, 0.565, 1) 2.5s both;
 }
 
 @-webkit-keyframes FadeIn {
